--- a/deploy/k8s/frontend.yaml
+++ b/deploy/k8s/frontend.yaml
@@ -17,7 +17,7 @@ spec:
       containers:
         - name: frontend
           image: diabrisk-frontend:dev
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Never
           ports:
             - containerPort: 80
 ---
