--- a/deploy/k8s/api-gateway.yaml
+++ b/deploy/k8s/api-gateway.yaml
@@ -17,7 +17,7 @@ spec:
       containers:
         - name: api-gateway
           image: diabrisk-api:dev
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Never
           ports:
             - containerPort: 8080
           readinessProbe:
