--- a/deploy/k8s/ingress.yaml
+++ b/deploy/k8s/ingress.yaml
@@ -6,9 +6,16 @@ metadata:
     kubernetes.io/ingress.class: traefik
 spec:
   rules:
-    - host: diabrisk.local
+    - host: localhost
       http:
         paths:
+          - path: /auth
+            pathType: Prefix
+            backend:
+              service:
+                name: api-gateway
+                port:
+                  number: 8080
           - path: /api
             pathType: Prefix
             backend:
